--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = { version = "1.0.100", default-features = false }
+clap = { version = "4.5.53", default-features = false, features = ["color", "derive", "help", "std", "usage"] }
+color-eyre = { version = "0.6.5", default-features = false }
 
 [dev-dependencies]
 criterion = "0.8.0"
